--- a/project.config.json
+++ b/project.config.json
@@ -28,7 +28,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.10.4",
-	"appid": "wxa46b09d413fbcaff",
+	"appid": "wxbc21cbbc69738065",
 	"projectname": "%E5%A4%A9%E4%BD%BF%E7%AB%A5%E8%A3%85",
 	"scripts": {},
 	"simulatorType": "wechat",
