--- a/app.json
+++ b/app.json
@@ -35,7 +35,8 @@
     "pages/invoice/list",
     "pages/invoice/apply",
     "pages/deposit/pay",
-    "pages/live/index"
+    "pages/live/index",
+    "pages/adDetail/index"
   ],
   "window": {
     "backgroundTextStyle": "light",
@@ -86,7 +87,7 @@
   ],
   "usingComponents": {
     "float-menu": "/components/float-menu/index",
-    "parser":"/components/parser.20200414.min/parser",
+    "parser": "/components/parser.20200414.min/parser",
     "van-notice-bar": "@vant/weapp/notice-bar/index",
     "van-search": "@vant/weapp/search/index",
     "van-divider": "@vant/weapp/divider/index",
